# vera-open

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: daily.yml  weekly.yml
docs/: CUSTOMIZE.md  SETUP.md  TEMPLATE.md  TROUBLESHOOTING.md
src/: __init__.py  auditor.py  checks.py  config.py  main.py  methodology.py  notion.py  pipeline.py  scorer.py  synthesize.py  tasks.py  telegram.py  timing.py
src/presets/: coach.txt  executive.txt
tests/: test_briefing.py  test_briefing_history.py  test_calendar.py  test_cli.py  test_last_run.py  test_state.py
vera/: __init__.py  __main__.py  briefing_history.py  cli.py  config.py  last_run.py  state.py
vera/backends/: __init__.py  base.py  notion.py
vera/integrations/: __init__.py  calendar.py  telegram.py
vera/llm/: __init__.py  base.py  claude.py  ollama.py
vera/modes/: __init__.py  briefing.py
vera/utils/: __init__.py
workspace/: AGENT.example.md  USER.example.md
